--- a/index.html
+++ b/index.html
@@ -19,30 +19,37 @@ button{padding:12px 16px;border:none;border-radius:8px;background:var(--brand);c
 button.gray{background:#e5e7eb;color:#111}
 button.green{background:var(--ok)}
 button.red{background:var(--bad)}
-button.kakao{background:#fee500; color:#3c1e1e; width: 100%; margin-top: 10px;}
-input, textarea {width:100%;padding:12px;border-radius:8px;border:1px solid var(--line);margin-top:6px;line-height:1.4;font-size: 16px; color: #333; font-family: inherit;}
-label{font-weight:600;margin-top:14px;display:block;}
-.table-wrapper {border: 1px solid var(--line);border-radius: 8px;background:#fff;overflow:hidden;}
-table{width:100%; border-collapse:collapse;}
-th,td{padding:14px;border-bottom:1px solid var(--line);text-align:center;}
-tr:last-child td{border-bottom:none;}
-td.title{text-align:left;line-height:1.4;}
-.badge{padding:6px 10px;border-radius:6px;color:#fff;font-size:12px;font-weight:700;}
+button.small{padding: 4px 10px; font-size: 13px; margin: 0; margin-left: 8px;}
+input, textarea {width:100%;padding:12px;border-radius:8px;border:1px solid var(--line);margin-top:6px;line-height:1.4;letter-spacing: -0.5px !important;font-size: 16px; color: #666;font-family: inherit;}
+input::placeholder, textarea::placeholder {color: #aaa;}
+label{font-weight:600;margin-top:14px;display:flex; align-items: center; justify-content: space-between;}
+.top-search {display: flex;gap: 8px;align-items: center;margin-bottom: 12px;}
+.top-search input {margin-top: 0;height: 48px;}
+.top-search button {height: 48px;margin: 0;min-width: 72px;white-space: nowrap;}
+.table-wrapper {max-height: 540px;overflow-y: auto;border: 1px solid var(--line);border-radius: 8px;}
+table{width:100%; border-collapse:collapse; position: relative;}
+thead th {position: sticky;top: 0;background: #fdfdfd;z-index: 10;border-bottom: 2px solid var(--line);}
+th,td{padding:12px;border-bottom:1px solid var(--line);text-align:center;vertical-align:middle;}
+tr.approval-row {cursor: pointer;-webkit-user-select: none;user-select: none;-webkit-touch-callout: none;}
+td.title{text-align:left;display:flex;flex-direction:column;gap:4px;line-height:1.35;}
+.badge{padding:6px 10px;border-radius:6px;color:#fff;font-size:13px;font-weight:700;}
 .ok{background:var(--ok)}.no{background:var(--bad)}.wait{background:var(--wait)}
-.parent-result{margin-top:12px;padding:12px;border-radius:8px;background:#f9fafb;border:1px solid var(--line); line-height: 1.6; font-size:14px;}
+.top-actions{display:flex;gap:10px;margin-bottom:16px;}
+.parent-result{margin-top:12px;padding:12px;border-radius:8px;background:#f9fafb;border:1px solid var(--line); line-height: 1.6;}
 .modal{position:fixed;inset:0;background:rgba(0,0,0,.4);display:none;align-items:center;justify-content:center;padding:16px;z-index: 1000;}
-.modal .card{width:min(400px,100%);}
-.btn-group {display: flex; gap: 8px;}
-.btn-group button {flex: 1;}
+.modal .card{width:min(480px,100%); max-height: 85vh; overflow-y: auto;}
+.stat-item {border-bottom: 1px dashed var(--line);padding: 12px 0;}
+.view-time-header {font-size: 14px;color: #666;margin-bottom: 10px;text-align: right;}
 </style>
 </head>
 <body>
 <header>가족 결재시스템</header>
 <main id="app">데이터 로딩 중...</main>
 <div id="pwModal" class="modal"></div>
+<div id="statModal" class="modal"></div>
 
 <script>
-/* 1. Firebase 설정 */
+/* 1. 설정 */
 const firebaseConfig = {
   apiKey: "AIzaSyC4wyLWlZSDwNN8pqMSxiebB9z5CWrc93E",
   authDomain: "family-systems-4d19c.firebaseapp.com",
@@ -57,9 +64,10 @@ const db = firebase.database();
 const PASSWORD = "7102";
 
 let route = { page: "list", id: null };
+let keyword = "";
 let allData = [];
 
-/* 2. 데이터 수신 */
+/* 2. 데이터 동기화 */
 db.ref("approvals").on("value", (snapshot) => {
   const val = snapshot.val();
   allData = val ? Object.keys(val).map(k => ({...val[k], dbId: k})) : [];
@@ -69,25 +77,33 @@ db.ref("approvals").on("value", (snapshot) => {
 /* 3. 유틸리티 */
 function now(){ const d=new Date(); return d.getFullYear()+"-"+String(d.getMonth()+1).padStart(2,"0")+"-"+String(d.getDate()).padStart(2,"0")+" "+String(d.getHours()).padStart(2,"0")+":"+String(d.getMinutes()).padStart(2,"0"); }
 function formatComma(v){ return v.replace(/[^0-9]/g, '').replace(/\B(?=(\d{3})+(?!\d))/g, ","); }
-function esc(s){ return String(s??"").replaceAll("<","&lt;").replaceAll(">","&gt;"); }
-function navigate(p){ route = p; render(); }
+function esc(s){ return String(s??"").replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;"); }
 function getStatus(r){
-  if((r.mom||'pending')==='approve' && (r.dad||'pending')==='approve') return '승인';
-  if(r.mom==='reject' || r.dad==='reject') return '반려';
-  return '대기';
+  const mom = r.mom || "pending"; const dad = r.dad || "pending";
+  if(mom === "pending" || dad === "pending") return "대기";
+  return (mom === "approve" && dad === "approve") ? "승인" : "반려";
+}
+function badge(s){ return `<span class="badge ${s==='승인'?'ok':(s==='반려'?'no':'wait')}">${s}</span>`; }
+function transKo(v){ return v === "approve" ? "승인" : (v === "reject" ? "반려" : "대기"); }
+
+function navigate(p, push=true){
+  route = p;
+  if(push) history.pushState(route,"");
+  render();
 }
 
-/* 4. 결재 상신 및 카톡 연동 */
+/* 4. 결재 상신 및 카톡 메시지 */
 function submit(){
   const t = document.getElementById("t").value.trim();
   const p = document.getElementById("p").value.trim();
+  const pl = document.getElementById("pl").value.trim();
   const rawC = document.getElementById("c").value.replace(/,/g, '').trim();
-  if(!t || !p || !rawC) return alert("빈칸을 채워주세요.");
+  if(!t || !p || !pl || !rawC) return alert("모든 칸을 입력해주세요.");
 
-  const newPost = { id: Date.now().toString(), title:t, purpose:p, cost:rawC, time:now(), mom:"pending", dad:"pending", momC:"", dadC:"" };
+  const newPost = { id: Date.now().toString(), title:t, purpose:p, plan:pl, cost:rawC, time:now(), mom:"pending", dad:"pending", momC:"", dadC:"", momTime:"", dadTime:"" };
   
   db.ref("approvals").push(newPost).then(() => {
-    const msg = `📢 결재가 상신되었습니다!\n제목: ${t}\n비용: ${formatComma(rawC)}원\n\n확인하기:\n${window.location.href}`;
+    const msg = `📢 새로운 결재가 도착했어요!\n제목: ${t}\n비용: ${formatComma(rawC)}원\n확인하기: ${window.location.href}`;
     if(confirm("상신 완료! 가족에게 카톡 알림을 보낼까요?")) {
         window.location.href = "kakaolink://send?text=" + encodeURIComponent(msg);
     }
@@ -108,7 +124,7 @@ function askDelete(dbId){
   }
 }
 
-/* 6. 부모 결재 처리 */
+/* 6. 부모 결재 */
 function openParent(id){
   const m = document.getElementById("pwModal");
   m.style.display="flex";
@@ -119,71 +135,96 @@ function authParent(id){
   document.getElementById("pwModal").style.display="none";
   const r = allData.find(x=>x.id===id);
   let h = "";
-  if(r.mom==='pending') h+=`<div class="card"><b>엄마 결재</b><textarea id="mC" placeholder="의견"></textarea><div class="btn-group"><button class="green" onclick="decide('${r.dbId}','mom','approve')">승인</button><button class="red" onclick="decide('${r.dbId}','mom','reject')">반려</button></div></div>`;
-  if(r.dad==='pending') h+=`<div class="card"><b>아빠 결재</b><textarea id="dC" placeholder="의견"></textarea><div class="btn-group"><button class="green" onclick="decide('${r.dbId}','dad','approve')">승인</button><button class="red" onclick="decide('${r.dbId}','dad','reject')">반려</button></div></div>`;
+  if(r.mom==='pending') h+=`<div class="card"><b>엄마 결재</b><textarea id="momC" rows="3" placeholder="의견"></textarea><button class="green" onclick="decide('${r.dbId}','mom','approve')">승인</button><button class="red" onclick="decide('${r.dbId}','mom','reject')">반려</button></div>`;
+  if(r.dad==='pending') h+=`<div class="card"><b>아빠 결재</b><textarea id="dadC" rows="3" placeholder="의견"></textarea><button class="green" onclick="decide('${r.dbId}','dad','approve')">승인</button><button class="red" onclick="decide('${r.dbId}','dad','reject')">반려</button></div>`;
   document.getElementById("parentArea").innerHTML = h || "<p>이미 결재를 완료하셨습니다.</p>";
 }
 function decide(dbId, who, val){
   const updates = {};
   updates[who] = val;
-  updates[who+"C"] = document.getElementById(who==='mom'?'mC':'dC').value;
+  updates[who+"C"] = document.getElementById(who+"C").value;
+  updates[who+"Time"] = now();
   db.ref("approvals/"+dbId).update(updates).then(() => navigate({page:'list'}));
 }
 
-/* 7. 화면 렌더링 */
+/* 7. 렌더링 (원래 UI 복원) */
 function render(){
   const app = document.getElementById("app");
+  let displayData = [...allData];
+  if(keyword) displayData = displayData.filter(x => JSON.stringify(x).includes(keyword));
+  displayData.sort((a,b) => b.time.localeCompare(a.time));
+
   if(route.page === "list"){
-    const list = [...allData].sort((a,b)=>b.time.localeCompare(a.time));
     app.innerHTML = `
-      <button style="width:100%;margin-bottom:16px;" onclick="navigate({page:'new'})">새 결재 올리기 +</button>
+      <div class="top-search"><button class="gray" onclick="doSearch()">검색</button><input id="q" placeholder="검색어 입력" value="${esc(keyword)}"></div>
+      <div class="top-actions"><button onclick="navigate({page:'new'})">결재올리기</button><button onclick="openStats()">통계</button></div>
       <div class="table-wrapper">
         <table>
-          <thead><tr style="background:#fdfdfd;"><th>제목 / 일시</th><th>상태</th></tr></thead>
+          <thead><tr><th>No</th><th>제목 / 상신시간</th><th>상태</th></tr></thead>
           <tbody>
-            ${list.map(r=>`
-              <tr onclick="navigate({page:'view', id:'${r.id}'})" style="cursor:pointer">
-                <td class="title"><b>${esc(r.title)}</b><br><small style="color:#888">${r.time}</small></td>
-                <td><span class="badge ${getStatus(r)==='승인'?'ok':(getStatus(r)==='반려'?'no':'wait')}">${getStatus(r)}</span></td>
+            ${displayData.map((r,i)=>`
+              <tr class="approval-row" onclick="navigate({page:'view', id:'${r.id}'})">
+                <td>${displayData.length - i}</td>
+                <td class="title"><div>${esc(r.title)}</div><small>${r.time}</small></td>
+                <td>${badge(getStatus(r))}</td>
               </tr>
             `).join("")}
           </tbody>
         </table>
       </div>`;
+    const q=document.getElementById("q"); if(q) q.addEventListener("keydown", e => e.key === "Enter" && doSearch());
   } 
   else if(route.page === "new"){
     app.innerHTML = `<div class="card">
-      <label>제목</label><input id="t" placeholder="예: 간식 구매">
+      <label>제목</label><input id="t" placeholder="무엇을 사고 싶나요?">
       <label>목적</label><textarea id="p" rows="3"></textarea>
+      <label>계획</label><textarea id="pl" rows="5"></textarea>
       <label>비용(원)</label><input id="c" type="text" oninput="this.value=formatComma(this.value)">
-      <button style="width:100%;margin-top:20px;" onclick="submit()">결재 상신</button>
-      <button class="gray" style="width:100%;" onclick="navigate({page:'list'})">취소</button>
+      <button onclick="submit()">결재올리기</button><button class="gray" onclick="navigate({page:'list'})">취소</button>
     </div>`;
   }
   else if(route.page === "view"){
-    const r = allData.find(x=>x.id===route.id);
+    const r = allData.find(x => x.id === route.id);
     if(!r) return navigate({page:'list'});
     app.innerHTML = `
+      <div class="view-time-header">상신: ${r.time}</div>
       <div class="card">
         <label>제목</label><input readonly value="${esc(r.title)}">
-        <label>목적</label><textarea readonly rows="3">${esc(r.purpose)}</textarea>
-        <label>비용</label><input readonly value="${Number(r.cost).toLocaleString()} 원">
-        <div class="parent-result">
-          <b>결재 현황</b><br>
-          엄마: ${r.mom==='approve'?'승인':(r.mom==='reject'?'반려':'대기')} (${esc(r.momC||'-')})<br>
-          아빠: ${r.dad==='approve'?'승인':(r.dad==='reject'?'반려':'대기')} (${esc(r.dadC||'-')})
-        </div>
+        <label>목적</label><textarea rows="3" readonly>${esc(r.purpose)}</textarea>
+        <label>계획</label><textarea rows="5" readonly>${esc(r.plan)}</textarea>
+        <label>비용(원)</label><input readonly value="${Number(r.cost).toLocaleString()}">
+      </div>
+      <div class="parent-result">
+        <b>부모 결재 기록</b><br>
+        엄마: ${transKo(r.mom)} / ${esc(r.momC||"-")}<br>
+        아빠: ${transKo(r.dad)} / ${esc(r.dadC||"-")}
       </div>
       <div id="parentArea"></div>
-      <button style="width:100%;" onclick="openParent('${r.id}')">부모 결재하기</button>
-      <div class="btn-group">
-        <button class="gray" onclick="navigate({page:'list'})">목록으로</button>
-        <button class="red" onclick="askDelete('${r.dbId}')">삭제하기</button>
+      <button onclick="openParent('${r.id}')">부모 결재</button>
+      <div style="display:flex; gap:10px;">
+        <button class="gray" style="flex:1" onclick="navigate({page:'list'})">목록</button>
+        <button class="red" style="flex:1" onclick="askDelete('${r.dbId}')">삭제</button>
       </div>`;
   }
 }
 
-render();
+function doSearch(){ keyword = document.getElementById("q").value.trim(); render(); }
+function openStats(){
+  const stats = {};
+  allData.filter(x => getStatus(x) !== "대기").forEach(item => {
+    const key = item.time.substring(0,7).replace("-","년 ") + "월";
+    if(!stats[key]) stats[key] = {app:0, appS:0, rej:0, rejS:0};
+    const s = getStatus(item); const c = Number(item.cost);
+    if(s==="승인"){ stats[key].app++; stats[key].appS+=c; } else { stats[key].rej++; stats[key].rejS+=c; }
+  });
+  const sorted = Object.keys(stats).sort().reverse();
+  const m = document.getElementById("statModal");
+  m.style.display="flex";
+  m.innerHTML = `<div class="card"><h3>월간 통계</h3><div class="table-wrapper">${sorted.map(k=>`<div class="stat-item"><b>${k}</b><br>✅ 승인: ${stats[k].app}건 (${stats[k].appS.toLocaleString()}원)<br>❌ 반려: ${stats[k].rej}건 (${stats[k].rejS.toLocaleString()}원)</div>`).join("") || "기록 없음"}</div><button onclick="this.parentNode.parentNode.style.display='none'" style="width:100%">닫기</button></div>`;
+}
+
+window.onpopstate = (e) => { if(e.state) { route = e.state; render(); } };
+history.replaceState({page:'list'}, "");
 </script>
 </body>
 </html>
